; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_scsi_ctl.c_ctlfeperiphdeinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_scsi_ctl.c_ctlfeperiphdeinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ctlfe_driver = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@EBUSY = common dso_local global i32 0, align 4
@ctlfeasync = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @ctlfeperiphdeinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ctlfeperiphdeinit() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @TAILQ_EMPTY(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ctlfe_driver, i32 0, i32 0))
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @EBUSY, align 4
  store i32 %5, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @ctlfeasync, align 4
  %8 = call i32 @xpt_register_async(i32 0, i32 %7, i32* null, i32* null)
  store i32 0, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local i32 @xpt_register_async(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
